// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fallback protokol nad runem WoZ testu > dnešní pásmová vrstva (kontrolní rameno bez fragmentů) 1`] = `
[
  {
    "odstavce": [
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Naražené rameno“. Náklad zůstal na voze.",
    ],
    "titulek": "Překladiště v Syracuse",
  },
  {
    "odstavce": [
      "Zjištěno, že v tomto bodě trasy nedošlo k ničemu, co by zakládalo úřední úkon. Všechny čtyři úlohy obstály; následek žádný, ztráta žádná. Při odjezdu se z místa ztratil ještě jeden kus, jehož původ zůstává neobjasněn a objasněn nebude.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průchod tímto bodem trasy hodnotím jako uspokojivý, byť ne úplný. Jedna ze čtyř úloh nedopadla; následky z toho neplynou žádné, na nákladu ani na osobách. Stav nákladu: šest beden. Hlášení k místu jsem přijal ústně a dále je nešířil.",
    ],
    "titulek": "Zátaras u Verony",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
    ],
    "titulek": "Starý most přes Mohawk",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Zvonění v uších“. Náklad zůstal na voze.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "V bodě hlášeném jako Most u Poughkeepsie byla nastražena léčka; pronásledovatel znal cestu předem, což mě přivádí k otázce, od koho. Vystoupit z vozu nikdo nestihl. Výsledek zaznamenávám níže.",
      "Tento bod trasy je nutno označit za průšvih v plném úředním významu slova. K dispozici byly „Petrolejová lampa“, „Mosazný boxer“, „Rezervní pneumatika“ a „Řeznický hák“; k čemu to bylo, spis neuvádí, neboť role zůstaly nezvládnuté tak jako tak. Podezřelý Bartoš je veden s těžkým následkem „Otřes mozku“, který se sám nespraví. Náklad se ztenčil o jedna bedna, zbývá pět beden. Pozornost zákona v okolí tím citelně vzrostla.",
    ],
    "titulek": "Most u Poughkeepsie",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "K úkonům jsou ve spisu vedeny „Uříznutá hlaveň“, „Starý kompas“, „Slzy na povel“ a „Dámský revolver“; volba nástrojů k jednotlivým rolím vzbuzuje otázky, na které tu nikdo neodpoví. Polovina úloh vyšla, polovina nikoli, což zdejší poměry vystihuje přesně. Podezřelý Bartoš je veden s následkem „Naražené rameno“; jak dlouho mu vydrží, se neuvádí. (Zapisuji bez soucitu, byť s pochopením.)",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; zda ostatní ztroskotaly pro nezpůsobilost, nebo pro nepřítomnost, spis neuvádí. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: čtyři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Podezřelý Bartoš dosáhl počtu následků, po kterém už není k ničemu, a byl odklizen do vozu. Co bylo lehčího, ztrácí se ležením; co těžšího, nikoli. Kdy se posadí, nechává spis otevřené. Do té doby je veden jako nezpůsobilý.",
    ],
    "titulek": "Mýtnice za Batavií",
  },
  {
    "odstavce": [
      "Náklad byl navzdory všemu doručen na místo určení; stav nákladu při předání: čtyři bedny. Kdo jej předával, rozplynul se dřív, než stačil kdokoli zapsat jméno správně. Spis se tímto uzavírá razítkem DORUČENO. (Zdejší úřad k věci dále nic nemá; ostatně nikdy neměl.)",
    ],
    "titulek": "Uzavření spisu — DORUCENO",
  },
]
`;

exports[`golden fallback protokol nad runem WoZ testu > s fragmentovou vrstvou 1`] = `
[
  {
    "odstavce": [
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Naražené rameno“. Náklad zůstal na voze.",
      "Bez závady je vedena položka „Zatlačit hrubě“; zasloužil se o to kus zapsaný jako „Dědečkova brokovnice“. Kus vedený jako „Kanystr benzínu“ byl na položku „Odsunout závoru“ zjevně krátký; spis to konstatuje bez údivu. K položce „Podmáznout dlaň“ byl veden kus zapsaný jako „Hovězí vývar“; k té jeho stránce se za daných poměrů nepřihlíželo. Předmět zapsaný jako „Kněžský kolárek“ obstál v úkonu vedeném jako „Zmást papírem“, což zaznamenávám bez dalšího.",
    ],
    "titulek": "Překladiště v Syracuse",
  },
  {
    "odstavce": [
      "Zjištěno, že v tomto bodě trasy nedošlo k ničemu, co by zakládalo úřední úkon. Všechny čtyři úlohy obstály; následek žádný, ztráta žádná. Při odjezdu se z místa ztratil ještě jeden kus, jehož původ zůstává neobjasněn a objasněn nebude.",
      "Úkon zapsaný jako „Proklouznout kolem“ vyřídil předmět vedený jako „Provaz a kladka“ způsobem, který spis raději nerozvádí. Zdařilo se: k úloze vedené jako „Vypáčit vagon“ byl přiřazen předmět zapsaný jako „Lopata“ a účelu vyhověl. Proti úloze vedené jako „Ztuhnout ve stínu“ stál předmět zapsaný jako „Kastrol na hlavě“ a nehnul se ani o píď. K položce „Kdyby se probudil“ postačil kus vedený jako „Páčidlo“; dál se už nikdo nevyptával.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průchod tímto bodem trasy hodnotím jako uspokojivý, byť ne úplný. Jedna ze čtyř úloh nedopadla; následky z toho neplynou žádné, na nákladu ani na osobách. Stav nákladu: šest beden. Hlášení k místu jsem přijal ústně a dále je nešířil.",
      "Ve věci vedené jako „Postavit se jim“ selhal kus zapsaný jako „Bedna kanadské“, a nikoli nešťastnou náhodou. Zdařilo se: k úloze vedené jako „Ustát nápor“ byl přiřazen předmět zapsaný jako „Plechová vesta“ a účelu vyhověl. Bez závady je vedena položka „Vyklouznout stranou“; zasloužil se o to kus zapsaný jako „Konev na mléko“. Předmět zapsaný jako „Ukradený samopal“ obstál v úkonu vedeném jako „Tasit včas a první“, což zaznamenávám bez dalšího.",
    ],
    "titulek": "Zátaras u Verony",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
      "Obstarat položku „Zvednout závoru“ měl předmět vedený jako „Kožená zástěra“; na tu práci byl krátký. K úkonu zapsanému jako „Zpevnit prkna“ bylo třeba dvou věcí naráz a kus „Medvědí kožich“ uměl jen tu snazší. Úkon zapsaný jako „Projet dírou“ vyřídil předmět vedený jako „Schovaná pistole“ způsobem, který spis raději nerozvádí. Proti úloze vedené jako „Nedat to na sobě“ stál předmět zapsaný jako „Tlustá bible“ a nehnul se ani o píď.",
    ],
    "titulek": "Starý most přes Mohawk",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Zvonění v uších“. Náklad zůstal na voze.",
      "Důraz, který se u úlohy vedené jako „Prorazit blokádu“ očekával, kus zapsaný jako „Banánový kanón“ nepřinesl. Kus vedený jako „Svářečka“ posloužil u položky „Strhnout do postranní“ přesně k tomu, k čemu byl vyroben. Nedostatečnost nutno přiznat — k úloze vedené jako „Zmizet v ulicích“ byl přiřazen předmět „Sekáček na led“ a nestačil. Bez závady je vedena položka „Držet nervy u okna“; zasloužil se o to kus zapsaný jako „Pytel cementu“.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "V bodě hlášeném jako Most u Poughkeepsie byla nastražena léčka; pronásledovatel znal cestu předem, což mě přivádí k otázce, od koho. Vystoupit z vozu nikdo nestihl. Výsledek zaznamenávám níže.",
      "Tento bod trasy je nutno označit za průšvih v plném úředním významu slova. K dispozici byly „Petrolejová lampa“, „Mosazný boxer“, „Rezervní pneumatika“ a „Řeznický hák“; k čemu to bylo, spis neuvádí, neboť role zůstaly nezvládnuté tak jako tak. Podezřelý Bartoš je veden s těžkým následkem „Otřes mozku“, který se sám nespraví. Náklad se ztenčil o jedna bedna, zbývá pět beden. Pozornost zákona v okolí tím citelně vzrostla.",
      "Výmluva postavená na kusu vedeném jako „Petrolejová lampa“ u položky „Zapřít totožnost“ neobstála ani na první pohled. Předmět vedený jako „Mosazný boxer“ měl v úkonu zapsaném jako „Nedat na sobě znát“ vydržet; povolil hned zkraje. Nedostatečnost nutno přiznat — k úloze vedené jako „Objet ho stranou“ byl přiřazen předmět „Rezervní pneumatika“ a nestačil. K položce „Kdyby sáhl po zbrani“ postačil kus vedený jako „Řeznický hák“; dál se už nikdo nevyptával.",
    ],
    "titulek": "Most u Poughkeepsie",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "K úkonům jsou ve spisu vedeny „Uříznutá hlaveň“, „Starý kompas“, „Slzy na povel“ a „Dámský revolver“; volba nástrojů k jednotlivým rolím vzbuzuje otázky, na které tu nikdo neodpoví. Polovina úloh vyšla, polovina nikoli, což zdejší poměry vystihuje přesně. Podezřelý Bartoš je veden s následkem „Naražené rameno“; jak dlouho mu vydrží, se neuvádí. (Zapisuji bez soucitu, byť s pochopením.)",
      "Předmět zapsaný jako „Uříznutá hlaveň“ obstál v úkonu vedeném jako „Probít se ven“, což zaznamenávám bez dalšího. Ve věci vedené jako „Ustát salvu“ selhal kus zapsaný jako „Starý kompas“, a nikoli nešťastnou náhodou. Úkon zapsaný jako „Strhnout do pole“ vyřídil předmět vedený jako „Slzy na povel“ způsobem, který spis raději nerozvádí. Důraz, který se u úlohy vedené jako „Krýt záda“ očekával, kus zapsaný jako „Dámský revolver“ nepřinesl.",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; zda ostatní ztroskotaly pro nezpůsobilost, nebo pro nepřítomnost, spis neuvádí. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: čtyři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Předmět vedený jako „Balík bankovek“ přišel k úloze označené jako „Silniční poplatek“ se schopností, která na tomto místě neplatila. Výmluva postavená na kusu vedeném jako „Dědkův kabát“ u položky „Zamluvit to“ neobstála ani na první pohled. Zdařilo se: k úloze vedené jako „Klidná tvář“ byl přiřazen předmět zapsaný jako „Pytel brambor“ a účelu vyhověl. Kus vedený jako „Stříbrná placatka“ byl na položku „Kdyby přituhlo“ zjevně krátký; spis to konstatuje bez údivu.",
      "Podezřelý Bartoš dosáhl počtu následků, po kterém už není k ničemu, a byl odklizen do vozu. Co bylo lehčího, ztrácí se ležením; co těžšího, nikoli. Kdy se posadí, nechává spis otevřené. Do té doby je veden jako nezpůsobilý.",
    ],
    "titulek": "Mýtnice za Batavií",
  },
  {
    "odstavce": [
      "Náklad byl navzdory všemu doručen na místo určení; stav nákladu při předání: čtyři bedny. Kdo jej předával, rozplynul se dřív, než stačil kdokoli zapsat jméno správně. Spis se tímto uzavírá razítkem DORUČENO. (Zdejší úřad k věci dále nic nemá; ostatně nikdy neměl.)",
    ],
    "titulek": "Uzavření spisu — DORUCENO",
  },
]
`;

exports[`golden nad runem se složením postavy (pokrytí N2) > spis se složením postavy 1`] = `
[
  {
    "odstavce": [
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Mlha v hlavě“. Náklad zůstal na voze.",
      "Nedostatečnost nutno přiznat — k úloze vedené jako „Utišit psy“ byl přiřazen předmět „Tlustá bible“ a nestačil. Předmět vedený jako „Pytel brambor“ splnil u položky „Zaklínit vrata“ přesně polovinu žádaného; druhá polovina chybí. Zdařilo se: k úloze vedené jako „Schovat bednu do sena“ byl přiřazen předmět zapsaný jako „Páčidlo“ a účelu vyhověl. Předmět zapsaný jako „Medvědí kožich“ obstál v úkonu vedeném jako „Nedýchat, když jde kolem“, což zaznamenávám bez dalšího.",
    ],
    "titulek": "Statkářova stodola",
  },
  {
    "odstavce": [
      "Zjištěno, že v tomto bodě trasy nedošlo k ničemu, co by zakládalo úřední úkon. Všechny čtyři úlohy obstály; následek žádný, ztráta žádná. Při odjezdu se z místa ztratil ještě jeden kus, jehož původ zůstává neobjasněn a objasněn nebude.",
      "Úkon zapsaný jako „Proklouznout kolem“ vyřídil předmět vedený jako „Kněžský kolárek“ způsobem, který spis raději nerozvádí. Kus vedený jako „Svářečka“ posloužil u položky „Vypáčit vagon“ přesně k tomu, k čemu byl vyroben. Bez závady je vedena položka „Ztuhnout ve stínu“; zasloužil se o to kus zapsaný jako „Balík bankovek“. K položce „Kdyby se probudil“ postačil kus vedený jako „Mosazný boxer“; dál se už nikdo nevyptával.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průchod tímto bodem trasy hodnotím jako uspokojivý, byť ne úplný. Jedna ze čtyř úloh nedopadla; následky z toho neplynou žádné, na nákladu ani na osobách. Stav nákladu: šest beden. Hlášení k místu jsem přijal ústně a dále je nešířil.",
      "Zdařilo se: k úloze vedené jako „Podstrčit papíry“ byl přiřazen předmět zapsaný jako „Hovězí vývar“ a účelu vyhověl. Kus vedený jako „Dědkův kabát“ byl na položku „Doložit razítko“ zjevně krátký; spis to konstatuje bez údivu. K položce „Zvýšit hlas“ postačil kus vedený jako „Řeznický hák“; dál se už nikdo nevyptával. Proti úloze vedené jako „Nedat se rozhodit“ stál předmět zapsaný jako „Kožená zástěra“ a nehnul se ani o píď.",
    ],
    "titulek": "Silniční váha u Amsterdamu",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
      "Bez závady je vedena položka „Držet nervy“; zasloužil se o to kus zapsaný jako „Rodinné stříbro“. Ve věci vedené jako „Zamluvit to“ selhal kus zapsaný jako „Stříbrná placatka“, a nikoli nešťastnou náhodou. Důraz, který se u úlohy vedené jako „Zastrašit gestem“ očekával, kus zapsaný jako „Konšelův prsten“ nepřinesl. Předmět zapsaný jako „Rezervní pneumatika“ obstál v úkonu vedeném jako „Najít skulinu“, což zaznamenávám bez dalšího.",
    ],
    "titulek": "Slepá ulička v Bronxu",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě role skončily bez užitku — ať už tím, že je zastal nevhodný kus, nebo tím, že je nezastal nikdo. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Zvonění v uších“. Náklad zůstal na voze.",
      "Kus vedený jako „Sekáček na led“ byl na položku „Prorazit blokádu“ zjevně krátký; spis to konstatuje bez údivu. Obstarat položku „Strhnout do postranní“ měl předmět vedený jako „Bedna kanadské“; na tu práci byl krátký. Úkon zapsaný jako „Zmizet v ulicích“ vyřídil předmět vedený jako „Banánový kanón“ způsobem, který spis raději nerozvádí. Proti úloze vedené jako „Držet nervy u okna“ stál předmět zapsaný jako „Otrlený výraz“ a nehnul se ani o píď.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; zda ostatní ztroskotaly pro nezpůsobilost, nebo pro nepřítomnost, spis neuvádí. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: pět beden. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Vlastnost, kterou se kus vedený jako „Dědečkova brokovnice“ vyznačuje, nesměla být u položky „Zvednout závoru“ uplatněna. Podezřelý Bartoš podléhá dřívějšímu omezení, a kus zapsaný jako „Dámský revolver“ tak u položky „Zpevnit prkna“ nic nezmohl. Výmluva postavená na kusu vedeném jako „Zlaté hodinky“ u položky „Projet dírou“ neobstála ani na první pohled. Podezřelý Bartoš podléhá dřívějšímu omezení, a kus zapsaný jako „Ukradený samopal“ tak u položky „Nedat to na sobě“ nic nezmohl.",
      "Podezřelý Bartoš nasbíral třetí následek v pořadí a tím přestal být k užitku. Byl uložen do vozu; výslech na místě nepřicházel v úvahu. Co se z toho dá vyležet, vyleží; co ne, veze si dál. Zastoupit ho nemá kdo, a spis k tomu nemá co dodat.",
    ],
    "titulek": "Starý most přes Mohawk",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; zda ostatní ztroskotaly pro nezpůsobilost, nebo pro nepřítomnost, spis neuvádí. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: čtyři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Úloha vedená jako „Probít se ven“ zůstala neobsazena; ke spisu k ní není zapsáno nic. Nevyplněno: tak zní úřední hodnocení stavu, v jakém zůstala mezera vedená jako „Ustát salvu“. K položce „Strhnout do pole“ neuvádí spis ani kus, ani úkon — prázdné místo se hodnotí samo. Nevyplněno: tak zní úřední hodnocení stavu, v jakém zůstala mezera vedená jako „Krýt záda“.",
      "Podezřelý Bartoš se posadil a je od tohoto bodu opět veden jako činný účastník. Jak dlouho ve voze ležel, spis nezaznamenává; nikdo to neměřil. Zda si z toho odnesl poučení, rovněž neuvádím. (Škoda; ve voze byl přehlednější.)",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Cesta skončila dřív než trasa, která k ní byla vybrána. Zboží na místo určení nedorazilo, po osobách není památky a svědci jsou hluší. Spis uzavírám razítkem NEVYŘEŠENO, aby se do konce měsíce neválel na stole. (Kdyby se něco našlo, jistě mi to někdo oznámí.)",
    ],
    "titulek": "Uzavření spisu — NEVYRESENO",
  },
]
`;
